--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>chatRoom</title>
-    <link rel="stylesheet" href="//cdnjs.loli.net/ajax/libs/mdui/0.4.1/css/mdui.min.css">
+    <link rel="stylesheet" href="./css/mdui.css">
     <script src="//cdnjs.loli.net/ajax/libs/mdui/0.4.1/js/mdui.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.dev.js"></script>
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
@@ -22,7 +21,7 @@
                         <textarea id="content" class="mdui-textfield-input" rows="1" type="text" placeholder="User Name"></textarea>
                     </div>
                     <div class="mdui-col-xs-2">
-                        <button id="send" class="mdui-textfield-send mdui-btn mdui-btn-icon"><i style="line-height: 40px" class="mdui-icon material-icons">send</i></button>
+                        <button id="send" class="mdui-textfield-send mdui-btn mdui-btn-icon"><embed src="baseline-send-24px.svg"></button>
                     </div>
             </div>
         </div>
